hphp/hack/test/typecheck/attributes/typeparam_typedef.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class A implements HH\TypeParameterAttribute {
  public function __construct(int $foo) {}
}

newtype Ty<<<A>> T> = int;
